--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "yarn tsc"
 	},
 	"devDependencies": {
+		"@types/body-parser": "^1",
 		"@types/express": "^4",
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.11.0",
@@ -16,7 +17,9 @@
 		"typescript": "^4.5.5"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.1",
 		"express": "^4.17.2",
+		"jose": "^4.5.0",
 		"sequelize": "^6.16.1"
 	}
 }
