--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
 		"build": "yarn tsc"
 	},
 	"devDependencies": {
-		"@types/body-parser": "^1",
-		"@types/express": "^4",
-		"@typescript-eslint/eslint-plugin": "^5.11.0",
-		"@typescript-eslint/parser": "^5.11.0",
-		"eslint": "^8.8.0",
+		"@types/bcrypt": "^5.0.0",
+		"@types/body-parser": "^1.19.2",
+		"@types/common-tags": "^1.8.1",
+		"@types/express": "^4.17.13",
+		"@types/pg": "^8.6.5",
+		"@typescript-eslint/eslint-plugin": "^5.14.0",
+		"@typescript-eslint/parser": "^5.14.0",
+		"common-tags": "^1.8.2",
+		"eslint": "^8.10.0",
+		"openapi-types": "^10.0.0",
 		"prettier": "^2.5.1",
 		"typescript": "^4.5.5"
 	},
 	"dependencies": {
-		"body-parser": "^1.19.1",
-		"express": "^4.17.2",
-		"jose": "^4.5.0",
-		"sequelize": "^6.16.1"
+		"bcrypt": "^5.0.1",
+		"body-parser": "^1.19.2",
+		"express": "^4.17.3",
+		"jose": "^4.6.0",
+		"pg": "^8.7.3",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.17.0"
 	}
 }
